# ai-agent-streamlit

./: .gitignore  requirements.txt  streamlit_app.py
marketing_agent/: README.md  pyproject.toml
marketing_agent/src/marketing_agent/: .env  crew.py  main.py
marketing_agent/src/marketing_agent/config/: agents.yaml  tasks.yaml
