[project]
name = "marketing_agent"
version = "0.1.0"
description = "marketing_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
marketing_agent = "marketing_agent.main:run"
run_crew = "marketing_agent.main:run"
train = "marketing_agent.main:train"
replay = "marketing_agent.main:replay"
test = "marketing_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
